--- a/index.html
+++ b/index.html
@@ -3,9 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Portfolio</title>
+    <title>Portfolio Simples</title>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    
+    <div class="parent">
+        <div class="sidebar">
+            <div class="sidebar-pos">
+                <div class="img-sidebar">
+                    <img src="img/wallpaper-anime.jpg" alt="">
+                </div><!--img-->
+                <div class="menu">
+                    <a href="#">Sobre</a>
+                    <a href="#">Experiência</a>
+                    <a href="#">Educação</a>
+                    <a href="#">Habilidades</a>
+                    <a href="#">Interesses</a>
+                    <a href="#">Premiações</a>
+                </div><!--menu-->
+            </div><!--sidebar-pos-->
+        </div><!--sidebar-->
+        <div class="content">
+            <section class="descricao">
+               <h1>Takumi <span>Takeshi</span></h1>
+               <h3>3542 BERRY STREET . CHEYENNE WELLS, CO 88810. (317)585-8468 . <span>NAME@EMAIL.COM</span></h3>
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo iste minima dicta molestiae dolore voluptatum dolores, tempora.</p>
+               <div class="icons-social">
+                    <a href="#"><img src="img/facebook.svg" alt=""></a>
+                    <a href="#"><img src="img/instagram.svg" alt=""></a>
+                    <a href="#"><img src="img/youtube.svg" alt=""></a>
+               </div><!--icons-social-->
+            </section>
+        </div><!--content-->
+    </div><!--parent-->
 </body>
 </html>
